--- a/src/stv-dialog/stv-dialog.html
+++ b/src/stv-dialog/stv-dialog.html
@@ -79,7 +79,7 @@ with a z-index above this value will not be blocked.
             }
 
             .modal-window {
-                box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+                box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
                 position: absolute;
                 top: 30%;
                 left: 50%;
