--- a/src/form/stv-form-behaviour.html
+++ b/src/form/stv-form-behaviour.html
@@ -19,6 +19,10 @@
             message: {
                 type: String,
                 value: ""
+            },
+            hasErrors: {
+                type: Boolean,
+                value: false
             }
         },
         isEqual: function(value, currentValue) {
@@ -167,6 +171,7 @@
             var parent = stv.utils.closest(id, "stv-form-box");
             parent.addError(msg);
             // this.errorMessage = "There are errors in the form. Correct them before launching the job.";
+            this.hasErrors = true;
         },
         clearAllErrors: function() {
             var selection = this.querySelectorAll("stv-form-box");
@@ -174,10 +179,11 @@
                 var sfb = selection[i];
                 sfb.clearErrors();
             }
-        },
-        clearErrors: function(id) {
-            var parent = stv.utils.closest(id, "stv-form-box");
-            parent.clearErrors();
-        },
+            this.hasErrors = false;
+        }
+        // clearErrors: function(id) {
+        //     var parent = stv.utils.closest(id, "stv-form-box");
+        //     parent.clearErrors();
+        // },
     };
 </script>
