--- a/src/ontology/stv-ontology-tree.html
+++ b/src/ontology/stv-ontology-tree.html
@@ -11,7 +11,7 @@
     </style>
     <template>
         <template is="dom-repeat" items="{{tree}}" as="file">
-            <stv-ontology-tree-item file="{{file}}">
+            <stv-ontology-tree-item file="{{file}}" tree="{{tree}}">
             </stv-ontology-tree-item>
         </template>
     </template>
