--- a/src/ontology/stv-ontology-tree-item.html
+++ b/src/ontology/stv-ontology-tree-item.html
@@ -36,6 +36,7 @@
             text-align: center;
             content: '\f0f6';
         }
+
         .fOpen:before {
             font-family: "FontAwesome";
             display: inline-block;
@@ -44,7 +45,7 @@
             content: '\f07c';
         }
 
-        :host[selected] #name{
+        :host[selected] #name {
             background-color: var(--selected-color);
         }
 
@@ -75,11 +76,11 @@
     <template>
         <div class="main horizontal layout stv-nosel">
             <div class="arrow" empty$="{{isEmpty(file.children)}}" open$="{{file.open}}" on-click="toggleOpen"></div>
-            <div id="name" class$="{{computeClass(file.children,file.open)}}" on-click="handleClick" on-dblclick="toggleOpen">{{computeName(file.name)}}</div>
+            <div id="name" class$="{{computeClass(file)}}" on-click="handleClick" on-dblclick="toggleOpen">{{computeName(file.name)}}</div>
         </div>
         <div style="margin-left:7px;" hidden$="{{!file.open}}">
             <template is="dom-repeat" items="{{auxItems}}" as="f">
-                <stv-ontology-tree-item file="{{f}}">
+                <stv-ontology-tree-item file="{{f}}" tree="{{tree}}">
                 </stv-ontology-tree-item>
             </template>
         </div>
@@ -95,10 +96,14 @@
                 auxItems: {
                     type: Array
                 },
-                selected:{
-                  type: Boolean,
-                  value:false,
-                  reflectToAttribute:true
+                selected: {
+                    type: Boolean,
+                    value: false,
+                    reflectToAttribute: true
+                },
+                tree: {
+                    type: Array,
+                    notify: true
                 }
             },
             fileChanged: function(neo, old) {
@@ -127,17 +132,14 @@
                 return name;
             },
             handleClick: function(e) {
-                this.selected=!this.selected;
+                this.selected = !this.selected;
             },
             toggleOpen: function(e) {
-                if (this.file.children.length > 0) {
-                    this.set('file.open', !this.file.open);
-                }
-                this.checkFiles();
+                this.getChildren(this.file.children);
             },
-            computeClass: function(sons, open) {
-                if (Object.keys(sons).length > 0) {
-                    if (open==true) {
+            computeClass: function(file) {
+                if (file.children.length > 0) {
+                    if (file.open == true) {
                         return "fOpen flex"
                     } else {
                         return "folder flex"
@@ -145,6 +147,44 @@
                 } else {
                     return "file flex"
                 }
+            },
+            getChildren(children) {
+                var me = this;
+                var ids = [];
+                var type = "hpo";
+                for (var i = 0; i < children.length; i++) {
+                    ids.push(children[i].id);
+                }
+                if (ids[0].indexOf("GO") >= 0) {
+                    type = "go";
+                }
+                BiodbManager[type].info({
+                    query: {
+                        id: ids.join(",")
+                    },
+                    request: {
+                        success: function(response) {
+                            if (response.error === '' || response.error.msg == "") {
+                                var responseChildrenMap = {};
+                                for (var i = 0; i < response.result.length; i++) {
+                                    responseChildrenMap[response.result[i].id] = response.result[i];
+                                }
+                                for (var i = 0; i < me.file.children.length; i++) {
+                                    var child = me.file.children[i];
+                                    child.children = responseChildrenMap[child.id].children;
+
+                                }
+                                me.set('file.open', !me.file.open);
+                                me.checkFiles();
+                            } else {
+                                console.log(response.error.msg);
+                            }
+                        },
+                        error: function() {
+                            console.log('Server error, try again later.');
+                        }
+                    }
+                });
             }
         });
     </script>
