Added open job folder

--- a/src/form/stv-form-behaviour.html
+++ b/src/form/stv-form-behaviour.html
@@ -23,6 +23,12 @@
             hasErrors: {
                 type: Boolean,
                 value: false
+            },
+            userData: {
+                type: Object
+            },
+            bioformats: {
+                type: Array
             }
         },
         isEqual: function(value, currentValue) {
