--- a/src/stv-form-box.html
+++ b/src/stv-form-box.html
@@ -7,6 +7,7 @@
             position: relative;
             box-sizing: border-box;
             margin: 7px 5px;
+            box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.3);
         }
 
         #form {
@@ -55,7 +56,7 @@
         }
 
         :host.error {
-            box-shadow: 0 0 10px 1px rgba(191, 71, 71, 1);
+            box-shadow: 0 0 8px 1px rgba(191, 71, 71, 1);
         }
 
         :host.error #header {
