--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -183,9 +183,8 @@
         .table-row.selected:hover {
             background-color: #bbb !important;
         }
-
         /*div.table-row:last-of-type {*/
-            /*border-bottom-width: 0;*/
+        /*border-bottom-width: 0;*/
         /*}*/
 
         .table-row:nth-child(2n) {
@@ -799,6 +798,7 @@
                     }
                     this.set('viewData', viewData);
                 }
+
             },
             viewDataChanged: function(neo, old) {
                 while (this.$.list.firstChild) {
@@ -924,7 +924,8 @@
                     var url = stv.utils.addQueryParamtersToUrl({
                         skip: ((this.currentPage - 1) * this.pageSize),
                         limit: this.pageSize,
-                        sort: this.request.sort
+                        sort: this.request.sort,
+                        search: this.request.search
                     }, this.request.url);
                     request.open(method, url, true);
                     request.send();
@@ -1100,25 +1101,35 @@
                 rowEl.appendChild(el);
             },
             _applyFilters: function() {
-                for (var i = 0; i < this.data.length; i++) {
-                    var row = this.data[i];
-                    var filtered = true;
-                    for (var key in this.filters) {
-                        var filter = this.filters[key];
-                        var match = false;
-                        switch (filter.type) {
-                            case 'text':
-                                var value = row[filter.colName].toLowerCase();
-                                match = (value.indexOf(filter.query.toLowerCase()) >= 0);
-                                break;
-                            case 'select':
-                                var value = row[filter.colName].toLowerCase();
-                                match = (value === filter.query.toLowerCase());
-                                break;
+                if (this.enableRemote) {
+                  var filter=[];
+                  for (var key in this.filters) {
+                    var field = key;
+                    var search=this.filters[key].query;
+                    filter.push(field+":"+search);
+                  }
+                  this.set('request.search', filter.join(","));
+                } else {
+                    for (var i = 0; i < this.data.length; i++) {
+                        var row = this.data[i];
+                        var filtered = true;
+                        for (var key in this.filters) {
+                            var filter = this.filters[key];
+                            var match = false;
+                            switch (filter.type) {
+                                case 'text':
+                                    var value = row[filter.colName].toLowerCase();
+                                    match = (value.indexOf(filter.query.toLowerCase()) >= 0);
+                                    break;
+                                case 'select':
+                                    var value = row[filter.colName].toLowerCase();
+                                    match = (value === filter.query.toLowerCase());
+                                    break;
+                            }
+                            filtered &= match;
                         }
-                        filtered &= match;
+                        row._filtered = filtered;
                     }
-                    row._filtered = filtered;
                 }
                 this.refreshPagination();
             },
