--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -8,12 +8,13 @@
 
 <script src="validator.js"></script>
 <script src="vcf-validator.js"></script>
+<script src="bed-validator.js"></script>
 <script src="expression-validator.js"></script>
 <script src="experimental-design-validator.js"></script>
 
 <dom-module name="stv-validator" noscript>
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-         :host {
+        :host {
             display: block;
             position: relative;
             box-sizing: border-box;
@@ -181,6 +182,10 @@
             overflow-y: auto;
             min-width: 400px;
             min-height: 150px;
+        }
+
+        #linePreviewPanel {
+            max-width: 1000px;
         }
     </style>
     <template>
