--- a/src/ontology/stv-go.html
+++ b/src/ontology/stv-go.html
@@ -68,8 +68,8 @@
 
         .add-but {
             font-size: 13px;
-            font-weight: bold;
-            color: #2F65F4;
+            background-color: #ed9c33 !important;
+            color: #FFFFFF !important;
             text-align: center;
             height: 30px;
             width: 150px;
