--- a/src/report/stv-report.html
+++ b/src/report/stv-report.html
@@ -77,6 +77,8 @@
         .image,
         .table,
         .boxplot,
+        .heatmap,
+        .proteinviewer,
         .message,
         .redirection {
             font-size: 18px;
@@ -86,6 +88,8 @@
         .download>a:hover,
         .image>a:hover,
         .boxplot>a:hover,
+        .heatmap>a:hover,
+        .proteinviewer>a:hover,
         .table>a:hover,
         .redirection>a:hover {
             text-decoration: underline;
@@ -94,6 +98,8 @@
         .download>a,
         .image>a,
         .boxplot>a,
+        .heatmap>a,
+        .proteinviewer>a,
         .table>a,
         .redirection>a {
             color: var(--secondary-text-color);
@@ -104,6 +110,8 @@
         .image>i,
         .table>i,
         .boxplot>i,
+        .heatmap>i,
+        .proteinviewer>i,
         .message>i,
         .redirection>i {
             color: var(--accent-color);
@@ -257,7 +265,9 @@
                     redirection: 'fa-forward',
                     goViewer: 'fa-share-alt',
                     interactomeViewer: 'fa-share-alt',
+                    proteinviewer: 'fa-share-alt',
                     networkMinerPlot: 'fa-bar-chart',
+                    heatmap: 'fa-bar-chart',
 
                 }
             },
@@ -430,6 +440,14 @@
                             i.classList.add("fa", this.iconMap['interactomeViewer']);
                             el.style.marginLeft = (10 + (level * 10)) + "px";
                             break;
+                        case 'proteinviewer':
+                            i.classList.add("fa", this.iconMap['proteinviewer']);
+                            el.style.marginLeft = (10 + (level * 10)) + "px";
+                            break;
+                        case 'heatmap':
+                            i.classList.add("fa", this.iconMap['heatmap']);
+                            el.style.marginLeft = (10 + (level * 10)) + "px";
+                            break;
                         case 'section':
                             el.style.fontWeight = "bold";
                             el.style.marginLeft = level * 10 + "px";
@@ -453,7 +471,6 @@
             _sectionTag: function(outEl) {
                 var el = document.createElement('div');
                 el.innerHTML = outEl.getAttribute('title');
-                // this._addTag(el, outEl);
                 return el;
             },
 
@@ -471,7 +488,6 @@
 
                 el.appendChild(i);
                 el.appendChild(a);
-                // this._addTag(el, outEl);
                 return el;
             },
             _redirectionTag: function(outEl) {
@@ -622,6 +638,182 @@
                 el.appendChild(chartDiv);
 
                 return el;
+            },
+            _heatmapTag: function(outEl) {
+                var me = this;
+
+                var name = outEl.getAttribute('file');
+                var el = document.createElement('div');
+
+                var i = document.createElement('i');
+                i.classList.add('fa', this.iconMap['heatmap']);
+
+                var a = document.createElement('a');
+                a.innerHTML = outEl.getAttribute('title');
+                a.appendChild(this._createDownloadIcon());
+
+                var chartDiv = document.createElement("div");
+
+                SteviaManager.getFileContent(me.getFileFromName(name)._id, function(content) {
+
+                    var data = me._parseHeatMapData(content);
+                    me._createHeatMap(data, chartDiv);
+                });
+
+                var exportHeatMap = function(e) {
+                    var chartElem = chartDiv;
+                    var chart = Highcharts.charts[chartElem.dataset["highchartsChart"]];
+                    chart.exportChart();
+                }
+
+                i.addEventListener('click', exportHeatMap);
+                a.addEventListener('click', exportHeatMap);
+
+                el.appendChild(i);
+                el.appendChild(a);
+                el.appendChild(chartDiv);
+
+                return el;
+            },
+            _createHeatMap: function(elem, div) {
+                var data = elem.data;
+                var cols = elem.cols;
+                var rows = elem.rowNames;
+
+                var height = 200;
+                height = height + rows.length * 15;
+
+                var width = cols.length * 15;
+                if (width < 500) {
+                    width = 500;
+                }
+                var heatMap = new Highcharts.Chart({
+                    chart: {
+                        renderTo: div,
+                        type: 'heatmap',
+
+                        height: height,
+                        width: width
+                    },
+                    title: {
+                        text: 'Heat Map'
+                    },
+
+                    xAxis: {
+                        categories: cols,
+                        opposite: true,
+                        labels: {
+                            rotation: -90
+                        }
+
+                    },
+                    yAxis: {
+                        categories: rows
+
+                    },
+                    colorAxis: {
+                        minColor: '#0000ff',
+                        maxColor: '#ff0000',
+                        stops: [
+                            [0, '#0000ff'],
+                            [0.5, '#ffffff'],
+                            [1, '#ff0000']
+                        ],
+                        min: 0,
+                        max: 1
+
+                    },
+                    exporting: {
+                        buttons: {
+                            contextButton: {
+                                text: 'Download'
+                            }
+                        }
+                    },
+                    plotOptions: {
+                        heatmap: {
+                            turboThreshold: data.length + 1
+                        }
+                    },
+                    tooltip: {
+                        formatter: function() {
+                            return '<b>Row:</b> ' + this.series.yAxis.categories[this.point.y] + '<br><b>' +
+                                '<b>Column:</b> ' + this.series.xAxis.categories[this.point.x] + '<br><b>' +
+                                '<b>Value:</b> ' + this.point.value + '<b>';
+                        }
+                    },
+
+                    series: [{
+                        name: 'DATA',
+                        borderWidth: 1,
+                        borderWidth: 1,
+                        data: data
+                    }]
+
+                });
+            },
+            _parseHeatMapData: function(content) {
+                var cols = [];
+                var data = [];
+                var rows = [];
+                var dataIdx = 1;
+                var rowNames = [];
+
+                var rawData = content.split("\n");
+                var prevLine = null;
+
+                var b = true;
+
+                /** Hack needed for sorting**/
+                var rawDataObj = {};
+                for (var i = 0; i < rawData.length; i++) {
+                    var line = rawData[i];
+                    if (line == "") continue;
+                    if (line.indexOf("#") < 0) {
+                        line = line.split("\t");
+                        rawDataObj[line[0].toString()] = line;
+                        rowNames.push(line[0].toString());
+                        if (b) { // PrevLine == last line of the header
+                            var splits = prevLine.split("\t");
+                            for (var j = 1; j < splits.length; j++) {
+                                cols.push(splits[j]);
+                            }
+                            b = false;
+                        }
+                    }
+                    prevLine = line;
+                }
+                var orderedContent = [];
+                for (var i = 0; i < rowNames.length; i++) {
+                    orderedContent.push(rawDataObj[rowNames[i]]);
+                }
+                /** end sorting **/
+
+                var numberRows = rowNames.length;
+                for (var i = 0; i < orderedContent.length; i++) {
+                    //                    console.log(i)
+                    //                    console.log(orderedContent[i])
+                    var lineData = orderedContent[i];
+                    lineData = lineData.slice(1, lineData.length).map(Number);
+                    var max = Math.max.apply(Math, lineData)
+                    var min = Math.min.apply(Math, lineData)
+                    for (var j = 0; j < lineData.length; j++) {
+                        var value = (lineData[j] - min) / (max - min);
+                        //                        value = lineData[j];
+                        data.push([j, numberRows - dataIdx, value]);
+                        //                        data.push([j, i, value]);
+
+                    }
+                    dataIdx++;
+
+                }
+                // this.createHeatMap(data, cols, this.rowNames.reverse());
+                return {
+                    data: data,
+                    cols: cols,
+                    rowNames: rowNames.reverse()
+                };
+
             },
             _createBoxPlotChart: function(chartDiv, title, data) {
                 var me = this;
@@ -857,6 +1049,49 @@
 
                 el.appendChild(iw);
                 return el;
+            },
+            _proteinviewerTag: function(outEl) {
+                var me = this;
+                var el = document.createElement('div');
+
+                var name = outEl.getAttribute('file');
+
+                var i = document.createElement('i');
+                i.classList.add('fa', this.iconMap['proteinviewer']);
+
+                var a = document.createElement('a');
+                a.innerHTML = outEl.getAttribute('title');
+                // a.setAttribute('href', SteviaManager.getFileURL(this.getFileFromName(name)._id));
+
+                var proteinViewer = document.createElement('babelomics-protein-viewer');
+                proteinViewer.style.height = '800px';
+
+                SteviaManager.getFileContent(this.getFileFromName(name)._id, function(content) {
+                    var nodes = me._parseProteinNodes(content);
+                    // proteinViewer.set('speciesSelection', "hsapiens");
+                    // proteinViewer.set('nodeSelection', false);
+                    proteinViewer.set('nodes', nodes);
+                });
+
+                el.appendChild(i);
+                el.appendChild(a);
+                el.appendChild(proteinViewer);
+                return el;
+            },
+            _parseProteinNodes: function(content) {
+                var lines = content.split('\n');
+                var line, fields, field, data = [];
+                if (lines.length > 0) {
+
+                    for (var i = 1; i < lines.length; i++) {
+                        line = lines[i];
+                        if (line != '' && line.charAt(0) != '#') {
+                            fields = line.split('\t');
+                            data.push(fields[0]);
+                        }
+                    }
+                }
+                return data;
             },
             _networkMinerPlotTag: function(outEl) {
                 var el = document.createElement('div');
