Scroll stop propagation.

--- a/src/stv-panel.html
+++ b/src/stv-panel.html
@@ -316,10 +316,14 @@
                 },
                 listeners: {
                     'mousedown': '_updateLastWindow',
-                    'iron-resize': 'handleResize'
+                    'iron-resize': 'handleResize',
+                    'scroll': 'handleScroll'
                 },
                 hostAttributes: {
                     'class': 'vertical layout flex'
+                },
+                handleScroll: function() {
+                    e.stopPropagation();
                 },
                 handleResize: function() {
 
