--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -278,7 +278,7 @@
                 },
                 sort: {
                     type: String,
-                    value: "name"
+                    value: "createdAt"
                 },
                 sortASC: {
                     type: Boolean,
