--- a/src/report/stv-report.html
+++ b/src/report/stv-report.html
@@ -778,7 +778,10 @@
                 pv.set('sessionFileNameMap', this.fileNameMap);
                 pv.set('path', outEl.getAttribute('path'));
                 pv.set('pathType', outEl.getAttribute('path-type'));
-                pv.set('showHipathiaLegend', true);
+
+                if (this.job.tool === 'hipathia') {
+                    pv.set('showHipathiaLegend', true);
+                }
 
                 // pw.style.border = "1px solid #d3d3d3";
                 // pw.style.boxShadow = "0px 0px 4px 0px rgba(0, 0, 0, 0.2)";
@@ -801,11 +804,27 @@
                 pdv.set('initPath', outEl.getAttribute('path') + '_init');
                 // pdv.set('validGenesFileName', outEl.getAttribute('valid-genes-file-name'));
                 pdv.set('validGenesFileName', 'valid_hgnc_module_genes.txt');
-                pdv.set('jobUpdateArgs', {
+
+                var updateArgs = {
                     tool: outEl.getAttribute('tool'),
                     execution: outEl.getAttribute('update-execution'),
-                    executable: outEl.getAttribute('update-executable')
-                });
+                    executable: outEl.getAttribute('update-executable'),
+                };
+                var outParam = outEl.getAttribute('out-param');
+                if (outParam != null) {
+                    updateArgs.options = {};
+                    updateArgs.options[outParam] = {
+                        out: true
+                    }
+                }
+
+                updateArgs.options['species'] = this.job.options.species;
+                updateArgs.options['exp_file'] = this.job.options.exp_file;
+                updateArgs.options['design_file'] = this.job.options.design_file;
+                updateArgs.options['sample'] = this.job.options.sample;
+                pdv.set('foldChange', 1);
+
+                pdv.set('jobUpdateArgs', updateArgs);
                 pdv.set('jobClearArgs', {
                     tool: outEl.getAttribute('tool'),
                     execution: outEl.getAttribute('clear-execution'),
