--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -11,6 +11,8 @@
 <script src="bed-validator.js"></script>
 <script src="expression-validator.js"></script>
 <script src="experimental-design-validator.js"></script>
+<script src="ranked-list-validator.js"></script>
+
 
 <dom-module name="stv-validator" noscript>
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
