--- a/src/stv-tooltip.html
+++ b/src/stv-tooltip.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../polymer/polymer.html">
-<dom-module id="stv-tooltip" is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-    <style>
+<dom-module id="stv-tooltip">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: inline-block;
             position: relative;
